# final-thrust

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.android  Dockerfile.linux  FinalThrust.as3proj  Jenkinsfile  README.md  readme.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/baabeli/finalthrust/: FinalThrustActivity.java
android/app/src/main/res/values/: strings.xml
lib/: sounds.html  sounds.swc  sounds.swf
src/: Asteroid.as  CMakeLists.txt  Home.as  Main.as  MenuState.as  Planet.as  PlayState.as  Player.as  RoundObject.as  Utils.as  main.cpp
src/core/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Entity.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Rect.h  Renderer.cpp  Renderer.h  State.h  StateManager.cpp  StateManager.h  Utils.cpp  Utils.h  Vec2.h  application.cpp  application.h  audio_manager.cpp  audio_manager.h  constants.h  input_manager.cpp  input_manager.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h
src/entities/: asteroid.cpp  asteroid.h  planet.cpp  planet.h  player.cpp  player.h  round_object.cpp  round_object.h
src/game/: Asteroid.cpp  Asteroid.h  Button.cpp  Button.h  CMakeLists.txt  MenuState.cpp  MenuState.h  Planet.cpp  Planet.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  RoundObject.cpp  RoundObject.h
src/states/: game_state.h  menu_state.cpp  menu_state.h  play_state.cpp  play_state.h  state_manager.cpp  state_manager.h
src/utils/: utils.cpp  utils.h  vec_ops.h  vector2.h
